<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".error.OfflineFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/offline_image_noInternet"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/no_internet_connection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/offline_tv_noInternetTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offline_tv_noInternetTitle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/offline_image_noInternet"/>

    <TextView
        android:id="@+id/offline_tv_noInternetBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline_tv_noInternetBody"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_margin="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/offline_tv_noInternetTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/offline_btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/offline_btn_retry"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/offline_tv_noInternetBody" />

</androidx.constraintlayout.widget.ConstraintLayout>